# fastapi-template

./: .copierignore  .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONFIGURATION-GUIDE.md  Dockerfile  GETTING-STARTED.md  INSTANCES.md  QUICKSTART.md  README.md  REMEDIATION-STATUS.md  REVERSE-SYNC-QUICK-START.md  TESTING_GUIDE.md  _tasks.py  copier.yaml  coverage.json  devspace.yaml  dotenv.example  pyproject.toml
.claude/: README.md  RUFF-GUIDE.md  TEMPLATE-TESTING.md  settings.json
.claude/agents/: api-designer.md  async-patterns-reviewer.md  backend-implementer.md  code-reviewer.md  database-migration-reviewer.md  migration-creator.md  observability-reviewer.md  security-reviewer.md  test-writer.md
.claude/commands/: follow-pod.md  implement.md  ship-it.md
.claude/domain/: devspace-command-map.md
.claude/shared/: edge-cases.md  output-formats.md  testing-philosophy.md
.claude/skills/_upstream/: README.md
.claude/skills/follow-logs/: skill.md
.claude/skills/implement/: skill.md
.claude/skills/test-instance/: skill.md
.github/workflows/: ci.yml  publish-template.yml  validate-template.yml
alembic/: CLAUDE.md  env.py  script.py.mako
alembic/versions/: 17b3833ecf41_add_document_table.py  2158c52d75b6_add_unique_constraint_on_app_user_email.py  4a684f791aee_initial.py  9c89a84af0d3_normalize_kratos_identity_id_constraints.py  add_role_field_to_membership.py  ffac4fcfdc07_add_kratos_identity_id_to_app_user.py
app/: main.py
app/api/: health.py  memberships.py  organizations.py  ping.py  routes.py  users.py
app/core/: config.py  logging.py  logging.yaml  pagination.py
app/db/: base.py  session.py
app/models/: base.py  membership.py  organization.py  shared.py  user.py
app/services/: membership_service.py  organization_service.py  user_service.py
app/tests/: conftest.py  test_memberships.py  test_migrations.py  test_organizations.py  test_users.py
docs/: DATABASE_POOLING.md  DEPLOYMENT.md  PRODUCTION_CHECKLIST.md  TEMPLATE-INSTANCE-SYNC.md  TENANT_ISOLATION.md  activity_logging.md  alerting_rules.md  api.rst  architecture.rst  background_jobs.md  caching.md  conf.py  configuration.rst  conventions.rst  copier_auth_configuration.md  decision_log.rst  deployment_variants.md  howto_add_feature.rst  implementing_email_service.md  implementing_log_archival.md  implementing_reports.md  index.rst  metrics.rst  resilience_patterns.md  service_integration_patterns.md  testing_external_services.md  troubleshooting.rst
docs/_build/html/: .buildinfo  api.html  architecture.html  conventions.html  decision_log.html  genindex.html  howto_add_feature.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  troubleshooting.html
fastapi_template/: main.py
fastapi_template/api/: CLAUDE.md  admin.py  documents.py  health.py  memberships.py  organizations.py  realtime_schemas.py  routes.py  users.py
fastapi_template/cache/: __init__.py  client.py  decorator.py  exceptions.py  keys.py  serialization.py
fastapi_template/core/: CLAUDE.md  activity_logging.py  auth.py  background_tasks.py  cache.py  config.py  http_client.py  logging.py  metrics.py  middleware.py  pagination.py  permissions.py  storage.py  storage_providers.py  tenants.py
fastapi_template/db/: CLAUDE.md  base.py  retry.py  session.py
fastapi_template/models/: CLAUDE.md  activity_log.py  base.py  document.py  membership.py  organization.py  shared.py  user.py
fastapi_template/realtime/: contracts.py  events.py  server.py
fastapi_template/services/: CLAUDE.md  membership_service.py  organization_service.py  user_service.py
fastapi_template/tests/: conftest.py  test_activity_logging.py  test_auth_security.py  test_auth_unit.py  test_background_tasks.py  test_db_retry.py  test_documents.py  test_health.py  test_http_client.py  test_logging.py  test_main_exception_handlers.py  test_membership_service.py  test_memberships.py  test_metrics.py  test_organization_service.py  test_organizations.py  test_race_conditions.py  test_security_sql_injection.py  test_storage_providers.py  test_tenant_isolation.py  test_tenants_unit.py  test_user_service.py  test_users.py
fastapi_template/tests/fixtures/: settings.py
fastapi_template/tests/helpers/: __init__.py  validation.py
fastapi_template/tests/integration/: __init__.py  conftest.py  test_activity_logging.py  test_admin_webhook.py  test_api_smoke.py  test_auth_security.py  test_cache_e2e.py  test_membership_service.py  test_memberships.py  test_migrations.py  (+7 more)
k8s/: app-config.yaml  app-deployment.yaml  app-secret.yaml  app-service.yaml  grafana-dashboard.json  kratos-config.yaml  kratos-identity-schema.yaml  oathkeeper-config.yaml  oathkeeper-rules.yaml  postgres-init-configmap.yaml  postgres-secret.yaml  postgres-statefulset.yaml
scripts/: check-instance-drift.sh  export-openapi.sh  install-upstream-skills.sh  k3d-down.sh  k3d-up.sh  manage-test-instance.sh  start.sh  templatize.sh  troubleshoot.sh
stubs/alembic/: __init__.pyi  command.pyi  context.pyi
stubs/sqlalchemy/: __init__.pyi
tests/: docker-compose.yml
{{ project_slug }}/: main.py
{{ project_slug }}/api/: admin.py  documents.py  health.py  memberships.py  organizations.py  ping.py  routes.py  users.py
{{ project_slug }}/core/: activity_logging.py  auth.py  background_tasks.py  config.py  http_client.py  logging.py  metrics.py  middleware.py  pagination.py  permissions.py  storage.py  storage_providers.py  tenants.py
{{ project_slug }}/db/: base.py  retry.py  session.py
{{ project_slug }}/models/: activity_log.py  base.py  document.py  membership.py  organization.py  user.py
{{ project_slug }}/services/: membership_service.py  organization_service.py  user_service.py
{{ project_slug }}/tests/: conftest.py  test_auth_security.py  test_documents.py  test_health.py  test_memberships.py  test_migrations.py  test_organizations.py  test_race_conditions.py  test_rbac_permissions.py  test_security_sql_injection.py  test_security_xss.py  test_storage_optional_deps.py  test_tenant_isolation.py  test_users.py
(+73 files in other folders)
