[project]
name = "fastapi_template"
version = "0.3.0"
description = "{{ description }}"
requires-python = ">=3.13,<3.14"
dependencies = [
  "fastapi>=0.138.2",
  "fastapi-pagination>=0.15.15",
  "uvicorn[standard]>=0.51.0",
  "sqlmodel>=0.0.39",
  "asyncpg>=0.31.0",
  "alembic>=1.18.5",
  "pydantic-settings>=2.14.2",
  "pydantic[email]>=2.13.4",
  "prometheus-client>=0.25.0",
  "ecs-logging>=2.3.0",
  "pyjwt[crypto]>=2.13.0",
  "httpx>=0.28.1",
  "python-multipart>=0.0.32",
  "slowapi>=0.1.10",
  "tenacity>=9.1.4",
  "python-socketio>=5.16.3",
  "redis>=8.0.0",
]

[tool.uv]
# Holdbacks: cap dependencies below their next major/breaking release during the
# safe dependency sweep (ticket #19). These are majors we have not yet vetted.
constraint-dependencies = [
  "mypy<2",      # TODO: removed by the mypy 2 upgrade ticket
  "starlette<1", # TODO: removed by the fastapi/starlette upgrade ticket (holds fastapi to a compatible 0.x)
  "fastapi<0.139", # TODO: removed by the fastapi 0.139/starlette 1.x upgrade ticket (#21)
]

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fastapi_template"]

[tool.ruff]
line-length = 119
src = ["fastapi_template"]
show-fixes = true
extend-exclude = ["stubs", "alembic/versions/*"]

[tool.ruff.lint]
# Extended rule set for production-grade code quality:
# E/F - Pyflakes errors and warnings (syntax, undefined names)
# I - isort (import sorting)
# N - pep8-naming (naming conventions)
# UP - pyupgrade (modern Python syntax)
# B - flake8-bugbear (common bugs and design problems)
# SIM - flake8-simplify (code simplification)
# PL - Pylint (comprehensive static analysis)
# RUF - Ruff-specific rules
# ANN - flake8-annotations (type annotations required)
# S - flake8-bandit (security best practices)
# W - pycodestyle warnings
# EM - flake8-errmsg (error message patterns)
# TRY - tryceratops (exception handling best practices)
# A - flake8-builtins (shadowing built-ins)
# ARG - flake8-unused-arguments (unused function arguments)
# C90 - mccabe (cyclomatic complexity)
# PT - flake8-pytest-style (pytest patterns)
# RSE - flake8-raise (raise statement patterns)
# RET - flake8-return (return statement patterns)
select = ["E", "F", "I", "N", "UP", "B", "SIM", "PL", "RUF", "ANN", "S", "W", "EM", "TRY", "A", "ARG", "C90", "PT", "RSE", "RET"]

[tool.ruff.lint.isort]
# This looks hardcoded to the source repo's package name, but it isn't:
# templatize.sh's blanket sed over pyproject.toml rewrites this value to the
# generated slug, so import grouping stays correct after templatization
# (without it, isort falls back to alphabetical-only grouping, which can
# mis-sort first-party imports once the package name changes).
known-first-party = ["fastapi_template"]

[tool.ruff.lint.flake8-annotations]
# FastAPI uses operator overloading heavily (Depends, Query, Path, etc.)
# Annotating __dunder__ methods adds noise without value
suppress-dummy-args = true
# ANN101/ANN102: Typing self/cls is redundant and clutters method signatures
# Modern type checkers infer self/cls types automatically
ignore-fully-untyped = true

[tool.ruff.lint.flake8-pytest-style]
# Use @pytest.mark.asyncio without parentheses (matches pytest-asyncio defaults)
mark-parentheses = false
# Use @pytest.fixture without parentheses when no arguments
fixture-parentheses = false

[tool.ruff.lint.mccabe]
# Maximum cyclomatic complexity for functions
# 10 is a reasonable threshold - functions above this should be refactored
max-complexity = 10

[tool.ruff.lint.per-file-ignores]
# Security checks are valuable in production code but add noise in tests
# where we intentionally create insecure test data (hardcoded passwords, etc.)
# PT009 allows raw assert statements which are appropriate for pytest
# PLR2004 allows magic numbers in test assertions (expected counts, etc.)
"fastapi_template/tests/**" = ["S", "PT009", "PLR2004", "ARG002", "TRY002"]
# PLC0415 allows late imports for optional dependencies (azure, aws, gcs)
"fastapi_template/core/storage.py" = ["PLC0415"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
mypy_path = "stubs"
exclude = [
    "alembic/versions/.*"
]

# Azure Blob Storage - no complete type stubs available
[[tool.mypy.overrides]]
module = ["azure.*"]
ignore_missing_imports = true

# Google Cloud - no complete type stubs available.
# google-cloud-storage 3.x ships partial py.typed markers that make mypy
# resolve `google.cloud` as a typed namespace package lacking the `storage`
# submodule, producing a spurious attr-defined on `from google.cloud import
# storage`. follow_imports=skip treats the namespace as untyped, matching the
# runtime-optional nature of these providers.
[[tool.mypy.overrides]]
module = ["google.*"]
ignore_missing_imports = true
follow_imports = "skip"

# Socket.IO - no complete type stubs available.
# python-engineio ships py.typed as of 4.13.3, so it no longer needs an
# ignore_missing_imports override (warn_unused_configs would flag it).
[[tool.mypy.overrides]]
module = ["socketio.*"]
ignore_missing_imports = true

[tool.coverage.run]
source = ["fastapi_template"]
# Required for accurate coverage with FastAPI + async SQLAlchemy
# SQLAlchemy async uses greenlets internally, and coverage.py loses track
# of execution across greenlet boundaries without this setting.
# See: https://github.com/nedbat/coveragepy/issues/1240
concurrency = ["greenlet", "thread"]
omit = [
    "fastapi_template/tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.pytest.ini_options]
addopts = "--tb=short -n auto --cov=fastapi_template --cov-report=term-missing --cov-fail-under=90 -m 'not integration'"
asyncio_mode = "auto"
testpaths = ["fastapi_template/tests"]
markers = [
    "integration: requires Docker services (Redis, Postgres)",
]

[project.optional-dependencies]
# Object storage provider dependencies (install as needed)
# Local storage (default) requires no additional dependencies
azure = ["azure-storage-blob>=12.30.0"]
aws = ["aioboto3>=15.5.0"]
gcs = ["google-cloud-storage>=3.13.0"]
# Install all cloud providers: pip install .[azure,aws,gcs]

[dependency-groups]
dev = [
  "filelock>=3.30.2",
  "furo>=2025.12.19",
  "httpx>=0.28.1",
  "mypy>=1.20.2",
  "pre-commit>=4.6.0",
  "psycopg[binary]>=3.3.4",
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "pytest-alembic>=0.12.1",
  "pytest-cov>=7.1.0",
  "pytest-docker>=3.2.5",
  "pytest-xdist>=3.8.0",
  "ruff>=0.15.22",
  "sphinx>=9.1.0",
  "myst-parser>=5.1.0",
  "types-aioboto3>=15.5.0",
  "types-aiobotocore[s3]",
  "aiohttp>=3.14.1",
]
